fix blur on safari

--- a/static/style.css
+++ b/static/style.css
@@ -77,6 +77,7 @@ a {
     padding:1rem;
     border-radius: .5rem;
     backdrop-filter: blur(50px);
+    -webkit-backdrop-filter: blur(50px);
 }
 
 #searchForm{
